add another bench with new usecase (multiple blocking clients)