@@ -24,7 +24,7 @@
                     <forkCount>1</forkCount>
                     <reuseForks>false</reuseForks>
                     <forkedProcessTimeoutInSeconds>300</forkedProcessTimeoutInSeconds>                    
-                    <argLine>-Xms2G -Xmx2G -Djava.io.tmpdir=${basedir}/target -XX:+PrintGC -Xloggc:target/gc.log -XX:+UseConcMarkSweepGC -XX:+CMSIncrementalMode</argLine>
+                    <argLine>-Xms2G -Xmx2G -Djava.io.tmpdir=${basedir}/target -XX:+UseG1GC -XX:+PrintGC -Xloggc:target/gc.log</argLine>
                 </configuration>
             </plugin>           
         </plugins>
